# AutoDiff

./: LICENSE  README.md  check_coverage.py  pyproject.toml  run_tests.sh
autodiff/: autoDiff.py  dual.py  reverse.py  trig.py
tests/: test_autoDiff.py  test_dual.py  test_reverse.py  test_trig.py
